--- a/apps/admin/composer.json
+++ b/apps/admin/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
+        "phpunit/phpunit": "4.8.*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*",
